guestbook.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: guestbook
  name: guestbook
  namespace: prajay-gl
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: guestbook
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: guestbook
    spec:
      containers:
      - image: brightcomputing/guestbook-frontend
        imagePullPolicy: Always
        name: guestbook-frontend
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        ports:
          - containerPort: 8080 
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
