mysql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: mysql-pod
  name: mysql-pod
  namespace: prajay-gl
spec:
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: mysql-pod
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mysql-pod
    spec:
      containers:
      - image: mysql
        imagePullPolicy: Always
        name: mysql
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        ports:
          - containerPort: 3306
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: mysql-storage
        emptyDir: {}
