phpmyadmin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: php
  name: php
  namespace: prajay-gl
spec:
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: php
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: php
    spec:
      containers:
      - image: phpmyadmin
        imagePullPolicy: Always
        name: mysql
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        ports:
          - containerPort: 8080
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
