mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mysqlservice
  name: mysql
  namespace: prajay-gl
spec:
  selector:
      app: mysql-pod
  ports:
  - name: 80-8080
    port: 3306
    targetPort: 3306
    protocol: TCP
  type:
    ClusterIP
  sessionAffinity: None
