rediservice.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redisservice
  name: redis-master
  namespace: prajay-gl
spec:
  selector:
      app: redis
  ports:
  - name: 80-8080
    port: 6379
    targetPort: 6379
    protocol: TCP
  type:
    ClusterIP
  sessionAffinity: None
